# dict_seg

./: .gitignore  README.md  pyproject.toml
dict_seg/: __init__.py  __main__.py  config.py  pipeline.py  segment.py
tests/: test_dict_seg.py
